--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,3 +1,8 @@
 scikit-learn
 pandas
 jupyter
+torch==1.9.1
+scikit-learn==0.24.2
+umap-learn==0.5.1
+sentence-transformers==2.0.0
+transformers==4.11.3
