--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,8 +1,9 @@
 scikit-learn
 pandas
 jupyter
-torch==1.9.1
-scikit-learn==0.24.2
-umap-learn==0.5.1
-sentence-transformers==2.0.0
-transformers==4.11.3
+torch
+scikit-learn
+umap-learn
+sentence-transformers
+transformers
+matplotlib
