--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@
 DOCKER_IMAGE_NAME = ml-app
 DOCKER_CONTAINER_NAME = ml-app-image
 VENV_NAME = ml-venv
-DATA_PATH =
-GIT_HASH := $(shell git rev-parse --short HEAD 2>/dev/null || echo "latest")
+DATA_PATH = "D:\Github Repos\EXAMEN-DATA-ENGINEERING\data"
+GIT_HASH := latest
